tests/snapshots/regression/recovery__double_comma_in_call_then_continue.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/double_comma_in_call_then_continue.flx
exit_code: 1

error[E034]: Unexpected Token

Expected expression after `,`, got `,`.

  tests/fixtures/recovery/double_comma_in_call_then_continue.flx:1:6
  |
1 | f(1, , 2);
  |      ^
